--- a/template.yaml
+++ b/template.yaml
@@ -30,8 +30,8 @@ Resources:
         Variables:
           TZ: "America/New_York"
       Policies:
-        - AWSSecretsManagerGetSecretValuePolicy:
-            SecretArn: 'arn:aws:secretsmanager:us-east-1:870747888580:secret:LambdaDeveloperKeys-Mubc5G'
+        - S3WritePolicy:
+            BucketName: 'busobservatory'
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
